app/styles/main.css
/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

/* Custom CSS starts here */
html, body {
  font-family: 'Roboto', sans-serif;
  font-size:14px;
  height:100%;
  margin: 0px;
  padding: 0px;
}

/* Toolbar area */

.menu {
  background-color: transparent;
  border: none;
  height: 38px;
  margin: 16px;
  width: 36px;
}

md-toolbar h1 {
  margin: auto;
}

/* Sidenav area */

md-list .md-button {
  color: inherit;
  font-weight: 500;
  text-align: left;
  width: 100%;
}
  md-list .md-button.selected {
    color: #03a9f4;
  }

  md-sidenav  md-list {
    padding: 0px 0px 8px 0px;
  }


/* Primary content area */

#content  {
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 5px;
}

#content .md-button.contact {
  background-color: transparent;
  border: none;
  width: 48px;
  height: 48px;
  margin: 8px auto 16px 0;
  position: absolute;
  top: 10px;
  right: 40px;
}

#content md-icon.avatar {
  margin-top: 10px;
}

#content .md-button.contact > md-icon {
  fill:black;
  width:36px;
  height:36px;
}

md-button.menuBtn > md-icon {
  fill:white;
  width:24px;
  height:24px;
}

#content .md-button.contact:active > md-icon {
  background-color: #dadada;
  border-radius: 75%;
  padding:4px;
  transition: all 100ms ease-out 30ms;
}

#content img {
  display: block;
  height: auto;
  max-width: 500px;
}

/* Utils */

.content-wrapper {
  position: relative;
}

/* Typography support coming in 0.8.0 */

md-toolbar h1 {
  font-size: 1.250em;
  font-weight: 400;
}

.avatar {
  position: relative;
  width: 128px;
  height: 128px;
  border: 1px solid #ddd;
  border-radius: 50%;
  display: inline-block;
  overflow: hidden;
  margin: 0px;
  vertical-align: middle;
  zoom:0.70;
  transform: translateZ(0);
  -webkit-transform: scale(0.70);
  -moz-transform:scale(0.70);
}


md-bottom-sheet  md-icon {
  margin-right:20px;
}

span.name {
  font-weight: bold;
  font-size:1.1em;
  padding-left:5px;
}

.banner {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 15%;
}

.card-media {
  background-color: #999999;
}

/*.node {
  stroke: #fff;
  stroke-width: 1.5px;
}*/

.link {
  stroke: #999;
  stroke-opacity: .6;
}

svg {
  margin: auto;
  display: block;
}

.reference-icon, .graph-sidebar {
  display: inline-block !important;
}

.disease-filter-group {
  margin-top: 25px;
}

.disease-filter {
  margin-bottom: 10px;
}

#slider {
  margin-top: 15px;
}

.noUi-tooltip {
  top: 32px !important;
}

.md-whiteframe-3dp {
  width: 30%;
  margin-left: auto;
  margin-right: 0;
  padding: 5px 5px 5px 5px;
}

#disease-graph {
  margin-top: -16px;
}

text.active {
  fill: red;
}

#treeBox .node {
}

#treeBox .node circle {
   fill: #fff;
   stroke: steelblue;
   stroke-width: 3px;
 }

/*#treeBox .node text { font: 12px sans-serif; }*/

#treeBox .link {
   fill: none;
   stroke-opacity: 1;
   stroke-width: 2px;
}

rect.cell, #disease-graph circle {
  cursor: pointer;
}

	
	
	.axis path , .axis line {
	fill : none;
	strok: #000;
	shape-rendering: crispEdges;
	
	}
	
	
 .node circle {
   fill: #fff;
   stroke: steelblue;
   stroke-width: 3px;
 }

 .node text { font: 12px sans-serif; }

 .link {
   fill: none;
   stroke: #ccc;
   stroke-width: 2px;
 }
 
 
 
 .xlabel , .ylabel {
font-weight:  bolder ; 
 font-size : 22px ; 
 }
 
     .d3-tip {
	    width: 400px;
        line-height: 1;
        font-weight: bold;
        padding: 15px;
        background: steelblue;
        color: white;
        border-radius: 2px;
      }
	  
 .rect {fill: rgba(0,0,0,.8) ;
        shape-rendering: crispEdges;	}  
	  
.rect:hover{
        fill: steelblue ;
      }

